# Laser-Cross-Detection

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  run.py
laser_cross_detection/: __init__.py
laser_cross_detection/calibration/: __init__.py  calibration_dataset.py  dlt_calibration.py  polynom_basis.py  soloff_cam_calibration.py  soloff_multi_cam_calibration.py  soloff_polynom.py
laser_cross_detection/core/: __init__.py  detection_abc.py  gunady_detection.py  hess_normal_line.py  hough_detection.py  kluwe_detection.py  ransac_detection.py  template_detection.py
laser_cross_detection/test/: __init__.py  test_image_generator.py
laser_cross_detection/utils/: __init__.py  hardware_target_utils.py  image_utils.py
notebooks/: accuracy_benchmark.ipynb  process_example_images.ipynb  soloff_calibration.ipynb  utils.py
notebooks/Example-Data/: dev_normal.set
notebooks/Example-Data/dev_normal/: JobHistory.xml  RecLoopData.xml  loop=50.set  loop=51.set  loop=52.set  loop=53.set  loop=54.set  loop=55.set  loop=56.set
notebooks/Example-Data/dev_normal/loop=50/: B00001.im7  JobHistory.xml
notebooks/Example-Data/dev_normal/loop=51/: B00001.im7  JobHistory.xml
notebooks/Example-Data/dev_normal/loop=52/: B00001.im7  JobHistory.xml
notebooks/Example-Data/dev_normal/loop=53/: B00001.im7  JobHistory.xml
notebooks/Example-Data/dev_normal/loop=54/: B00001.im7  JobHistory.xml
notebooks/data/: gunady_camera1_detections.txt  gunady_camera2_detections.txt  gunady_targets.npz
(+4 files in other folders)
