[project]
name = "laser-cross-detection"
version = "1.0.0"
description = "This projet contains the source code for the paper 'Robust laser cross detection for non-invasive volumetric camera calibration' published in Measurement Science and Technology (DOI 10.1088/1361-6501/adcb5b)"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Moritz Kluwe", email = "moritz-niklas.kluwe@imfd.tu-freiberg.de"},
    {name = "Robert Hardege", email = ""},
]
keywords = ["computer-vision", "image-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "lmfit>=1.3.3",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "perlin-numpy",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "ruff>=0.11.11",
]

[tool.uv.sources]
perlin-numpy = { git = "https://github.com/pvigier/perlin-numpy" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"